--- a/assets/custom/style.css
+++ b/assets/custom/style.css
@@ -8,7 +8,11 @@ body {
     overflow: hidden;
 }
 
-.grab {cursor: -webkit-grab; cursor: grab;}
+.grab {
+    cursor: -webkit-grab;
+    cursor: grab;
+}
+
 #map {
     position: absolute;
     right: 0;
@@ -19,32 +23,38 @@ body {
     margin: 5px;
     background-color: #E4D8CC;
 }
-#info {
+
+.cname {
+    /* text-align: right; */
     position: absolute;
-    right: 0;
-    left: 70%;
-    top: 60px;
-    bottom: 0;
-    margin: 5px 5px 5px 0;
-    border: dotted #82bd03;
-    background-color: #ccf8d1;
-    z-index: 400;
-    overflow-y: auto;
+    font-size: 14px;
+    font-weight: bold;
+    /* border: 1px solid black; */
 }
+.source{
+    width: 150px;
+    text-align: center;
+}
+.destination{
+    width: 100px;
+    text-align: center;
+}
+
 #icon {
     height: 100px;
 }
+
 .btn-home {
     z-index: 50;
 }
 
 .popupCustom .leaflet-popup-content-wrapper {
-    background: #daaf38; 
+    background: #daaf38;
     color: #000;
     font-family: Helvetica, sans-serif;
     font-size: 14px;
-    font-weight: bold!important;
-    line-height:0;
+    font-weight: bold !important;
+    line-height: 0;
     border-radius: 40px;
     border: 5px solid #885d06;
     text-decoration: none;
@@ -53,9 +63,11 @@ body {
 .popupCustom .leaflet-popup-content-wrapper a {
     color: #3A3845;
 }
+
 .popupCustom .leaflet-popup-tip-container {
     /* height: 50px; */
 }
+
 .popupCustom .leaflet-popup-tip {
     background: transparent;
     border: none;
@@ -65,22 +77,23 @@ body {
 
 .leaflet-bar.disabled,
 .leaflet-bar button.disabled {
-  opacity: 0;
-  border: none;
+    opacity: 0;
+    border: none;
 }
 
 .g-icon {
-    width: 20px; 
+    width: 20px;
     height: 41px;
 }
 
 .g-icon .g-icon-i {
-    color:rgb(233, 233, 233);
-    font-size:18px;
+    color: rgb(233, 233, 233);
+    font-size: 18px;
     top: 7px;
     left: 3px;
     position: absolute;
 }
+
 .g-icon .g-icon-i-l {
     color: rgb(233, 233, 233);
     top: 18%;
@@ -88,7 +101,8 @@ body {
     position: absolute;
     text-align: center;
 }
-.g-circle{
+
+.g-circle {
     width: 16px;
     height: 16px;
     background: rgba(255, 255, 255, .9);
@@ -97,8 +111,9 @@ body {
     /* align-items: center; */
     /* justify-content: center; */
 }
-.spacer{
-	height:20px;
-	clear:both;
-	width:100%;
+
+.spacer {
+    height: 20px;
+    clear: both;
+    width: 100%;
 }
